--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -1,4 +1,114 @@
 .Home {
     margin: 0;
     padding: 0;
+    /* background-color: #eae2b7; */
+}
+
+.home-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    /* margin-right: 2vw; */
+    max-width: 1080px;
+    /* background-color: #f77f00; */
+    padding-left: 20px;
+}
+
+
+
+@media only screen and (min-width: 550px) and (max-width: 1080px) {
+    .card-container {
+        width: 550px;
+    }
+}
+
+@media only screen and (min-width: 285px) and (max-width: 550px) {
+    .card-container {
+        width: 285px;
+    }
+}
+
+.card-details {
+    width: 225px;
+    height: 300px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 20px;
+    background-color: rgba(156, 156, 168,0.75);
+}
+
+.card-div {
+    
+}
+
+.loader {
+    position: absolute;
+    border: 2vw solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 2vw solid black;
+    width: 8vw;
+    max-width: 50px;
+    height: 8vw;
+    max-height: 50px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+}
+
+.card-btn {
+    width: 225px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.card-body {
+    margin: 0;
+    padding: 0;
+    height: 195px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.card-btn a {
+    /* padding: 4px; */
+    background-color: rgb(222, 222, 222);
+    font-size: larger;
+    padding: 0 5px;
+    padding-bottom: 2px;
+    border-radius: 0.2em;
+    margin-right: 15px;
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+.card-title {
+    text-align: center;
+}
+
+.card-text {
+    font-size: 15px;
+    font-weight: 600;
+    padding: 5px;
+    background-color: rgba(222, 222, 222, 0.452);
+    border-radius: 0.75em;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
