--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -71,12 +71,61 @@
     animation: spin 2s linear infinite;
 }
 
-.input-forCollection {
+.null-collection {
+    text-align: center;
+}
+
+.input-forCollection-in {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-item-list {
+    margin-right: 10px;
+    margin-top: 5px;
+    font-size: large;
+    font-weight: 600;
+    border: none;
+    border-radius: 0.25em;
     background-color: white;
+    color: black;
+}
+
+#searchBar {
+    border: none;
+    outline: none;
+    border-radius: 0.2em;
+    padding-left: 5px;
+}
+
+#searchBtn {
+    font-size: large;
+    font-weight: 600;
+    padding: 5px;
+    color: white;
+    border-radius: 0.25em;
+    background-color: rgba(226, 226, 226, 0.603);
+    border: none;
+}
+
+#searchBtn:hover {
+    color: rgba(223, 222, 222, 0.925);
+    background-color: rgba(187, 187, 187, 0.603);
+}
+
+.add-item-list:hover {
+    background-color: rgba(59, 59, 59, 0.76);
+    color: rgba(255, 255, 255, 0.897);
+}
+
+.input-forCollection {
+    background-color: rgba(226, 226, 226, 0.603);
     height: 100px;
     width: 250px;
     display: flex;
-    z-index: 1;
+    /* z-index: 1; */
     align-items: center;
     justify-content: center;
 }
@@ -112,12 +161,41 @@
 }
 
 .collection-show-list {
-    background-color: white;
+    /* background-color: white; */
     min-width: 100px;
     min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-display {
+    
+}
+
+.addCollectionBtn {
+    margin-top: 50px;
+    padding: 5px;
+    font-size: medium;
+    font-weight: 600;
+    text-align: center;
+    justify-content: center;
+    background-color: rgba(87, 87, 87, 0.849);
+    color: rgba(216, 216, 216, 0.945);
+    border: 0;
+    border-radius: 0.5em;
+}
+.addCollectionBtn:hover {
+    background-color: rgba(228, 228, 228, 0.849);
+    color: black;
 }
 
 .collection-btn {
+    text-align: center;
+    padding: 5px;
+    border-radius: 0.5em;
+    background-color: rgba(204, 204, 204, 0.548);
     cursor: pointer;
     font-size: medium;
     font-weight: 600;
