--- a/src/Components/Login/style.css
+++ b/src/Components/Login/style.css
@@ -35,9 +35,12 @@
     padding: 7.5px;
     border-radius: 0.5em;
     font-weight: 600;
+    transition: 0.5s;
+
 }
 
 .form-container button :hover {
+    transition: 0.5s;
     background-color: aqua;
 }
 
