--- a/src/Components/Navigation/style.css
+++ b/src/Components/Navigation/style.css
@@ -14,9 +14,11 @@ nav {
     padding: 5px;
     background-color: rgba(169, 169, 172, 0.75);
     border-radius: 0.4em;
+    transition: 0.5s;
 }
 
 .nav-links-list li:hover  {
+    transition: 0.5s;
     background-color: rgb(199, 199, 199);
 }
 
